--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=TP-Encheres
+
+spring.datasource.url=jdbc:sqlserver://localhost;databasename=ENI-ENCHERES;integratedSecurity=false;encrypt=false;trustServerCertificate=false
+spring.datasource.username=sa
+spring.datasource.password=Pa$$w0rd
+#Détail des requêtes pour le développement
+logging.level.org.springframework.jdbc.core=TRACE
